--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "MySettings": {
+        "CDApiUrl": "https://host:port/api"  
+    }
 }
