Implement call to Api

--- a/src/Archive.CDManagement.Frontend.csproj
+++ b/src/Archive.CDManagement.Frontend.csproj
@@ -5,4 +5,8 @@
     <UserSecretsId>f117c520-4ffe-4fa7-b3b5-c075bb0b64d8</UserSecretsId>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
 </Project>
