--- a/src/Properties/launchSettings.json
+++ b/src/Properties/launchSettings.json
@@ -1,27 +1,27 @@
-﻿{
+{
     "iisSettings": {
         "windowsAuthentication": false,
         "anonymousAuthentication": true,
         "iisExpress": {
-            "applicationUrl": "http://localhost:50147",
+            "applicationUrl": "http://localhost:50420",
             "sslPort": 44384
         }
     },
     "profiles": {
         "IIS Express": {
             "commandName": "IISExpress",
-            "launchBrowser": true,
+            "launchBrowser": false,
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             }
         },
         "Archive.CDManagement.Frontend": {
             "commandName": "Project",
-            "launchBrowser": true,
-            "applicationUrl": "https://localhost:5001;http://localhost:5000",
+            "launchBrowser": false,
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
-            }
+            },
+            "applicationUrl": "https://localhost:5001;http://localhost:5000"
         }
     }
 }
