Update For Datetime now,. Added Help Pages.

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -8,6 +8,6 @@
     },
     "AllowedHosts": "*",
     "MySettings": {
-        "CDApiUrl": "https://host:port/api"
+        "CDApiUrl": "https://host:port/"
     }
 }
